* Added support for typedefs with an explicit type
* Fixed backend headers to use backends/ folder for includes, and added some missing headers
* Added --backend-include-dir to allow specifying the path where backend header files are found
* Made "fmt" arguments non-nullable by default in the metadata (#57, thanks to [@pdoane] for the idea)

--- v0.06

* In ImGui v1.90.0 WIP the callback variants of "ListBox()" and "ComboBox()" have a new function pointer type, but the
  old type is still available as an overload. Disambiguating based solely on function pointer type is problematic, so
  instead Dear Bindings renames the "old" versions of those two functions as "ImGui_ListBoxObsolete()" and
  "ImGui_ComboBoxObsolete()" respectively.

--- v0.05

* Added source information giving the original file and line number of each element to the JSON output (#39)
* Added type comprehension system, which generates a breakdown of type information in the JSON output
* Added --nopassingstructsbyvalue flag to force struct parameters to be passed as pointers
* **BREAKING CHANGE** Renamed the "type" field of classes/structs/unions in the JSON output (the one that contained
  "struct"/"class"/"union") to "kind" to avoid confusion with the actual type
* **BREAKING CHANGE** Removed the "names" field from field definitions in the JSON, and instead emit one field
  for each distinct name defined in the original source (so "float x,y" is no longer represented in the JSON as a single
  field with two names, but two separate fields). This simplifies the JSON by removing the concept of fields with
  multiple names and makes field and argument definitions more consistent.
* Renamed anonymous structures in the JSON from "<AnonymousN>" to "__anonymous_typeN" so as to avoid generating names
  that are not valid identifiers (which was the original goal, but in practice that seemed to cause more problems than
  it solved).