@@ -26,6 +26,7 @@
 * Fixed backend headers to use backends/ folder for includes, and added some missing headers
 * Added --backend-include-dir to allow specifying the path where backend header files are found
 * Made "fmt" arguments non-nullable by default in the metadata (#57, thanks to [@pdoane] for the idea)
+* Fixed a bug where JSON metadata did not include fields that were in the else clause of a preprocessor conditional (#61)
 
 --- v0.06
 
